corrections contraste

--- a/style.css
+++ b/style.css
@@ -658,7 +658,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757 !important;
+    color: #000000 !important;
 }
 
 .container {
@@ -782,17 +782,17 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C !important;
+    color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF !important;
+    color: #000000 !important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956 !important;
-    color: #FFFFFF !important;
+    color: #000000 !important;
 }
 
 .ltc-white {
